# Counter-Room

./: README.md  main.py  pyproject.toml  requirements.txt
src/courtroom_viz/: __init__.py  crew.py  models.py
src/courtroom_viz/config/: __init__.py  agents.yaml  tasks.yaml
src/courtroom_viz/tools/: __init__.py
testCase/: Witness_Statement_Brian_Kato_Kaelin.txt  Witness_Statement_Schwab.txt  Witness_Statement_Sukru_Boztepe.txt  call-transcript.txt  expert_testimony.txt  police_report.txt
